Fix Input form value not showing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,8 +13,8 @@
 .resultTable tr,.resultTable td{
     border:1px solid black;
 }
-input {
-    width:100px;
+.container input {
+    min-width: 35px;   
 }
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button{
